--- a/src/plugins/i2c/Makefile.am
+++ b/src/plugins/i2c/Makefile.am
@@ -33,6 +33,7 @@ MAINTAINERCLEANFILES	= Makefile.in
 AM_CPPFLAGS 		= -I$(top_srcdir)/include
 
 EXTRA_LTLIBRARIES	= libintf_i2c.la
-noinst_LTLIBRARIES	= @INTF_IMB_LIB@
-libintf_imb_la_LIBADD	= $(top_builddir)/lib/libipmitool.la
-libintf_imb_la_SOURCES	= i2capi.c i2capi.h i2c.c
+noinst_LTLIBRARIES	= @INTF_I2C_LIB@
+libintf_i2c_la_LIBADD	= $(top_builddir)/lib/libipmitool.la
+libintf_i2c_la_SOURCES	= i2c.c
+
